--- a/messaging/index.html
+++ b/messaging/index.html
@@ -75,10 +75,21 @@ limitations under the License.
 <!-- Import and configure the Firebase SDK -->
 <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
 <!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
-<script src="/__/firebase/5.7.0/firebase-app.js"></script>
+<!-- <script src="/__/firebase/5.7.0/firebase-app.js"></script>
 <script src="/__/firebase/5.7.0/firebase-messaging.js"></script>
-<script src="/__/firebase/init.js"></script>
-
+<script src="/__/firebase/init.js"></script> -->
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyByfo-hAmMRA21u2SyZVxH-f-39uvEYetw",
+    authDomain: "learnfirebase2019.firebaseapp.com",
+    databaseURL: "https://learnfirebase2019.firebaseio.com",
+    projectId: "learnfirebase2019",
+    storageBucket: "learnfirebase2019.appspot.com",
+    messagingSenderId: "332196973018"
+  };
+  firebase.initializeApp(config);
+</script>
 <script>
   // [START get_messaging_object]
   // Retrieve Firebase Messaging object.
