--- a/firestore/index.html
+++ b/firestore/index.html
@@ -349,11 +349,22 @@
   </aside>
 </div>
 
-<script src="/__/firebase/5.7.0/firebase-app.js"></script>
+<!-- <script src="/__/firebase/5.7.0/firebase-app.js"></script>
 <script src="/__/firebase/5.7.0/firebase-auth.js"></script>
 <script src="/__/firebase/5.7.0/firebase-firestore.js"></script>
-<script src="/__/firebase/init.js"></script>
-
+<script src="/__/firebase/init.js"></script> -->
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyByfo-hAmMRA21u2SyZVxH-f-39uvEYetw",
+    authDomain: "learnfirebase2019.firebaseapp.com",
+    databaseURL: "https://learnfirebase2019.firebaseio.com",
+    projectId: "learnfirebase2019",
+    storageBucket: "learnfirebase2019.appspot.com",
+    messagingSenderId: "332196973018"
+  };
+  firebase.initializeApp(config);
+</script>
 <script src="//unpkg.com/navigo@6"></script>
 
 <script src="/scripts/FriendlyEats.js"></script>
